update email button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<ul class="labeled-icons">
 							<li>
 								<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-								<a href="#">jesdaile@swin.edu.au</a>
+								<a href="mailto:jesdaile@swin.edu.au">jesdaile@swin.edu.au</a>
 							</li>
 						</ul>
 					</section>
