a prof for Ned and no more pancake enthusiast

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
-							<h2>Astronomer, climate advocate and pancake enthusiast.</h2>
-						</header>
-						<p>I'm a PhD student at the Centre for Astrohphyiscs and Supercomputing in Melbourne where I work on observing massive and quiescent galaxies at high redshift using NIR imaging and spectroscopy.  My supervisors are Prof. Karl Glazebrook, A. Prof. Ivo Lab&eacute and Dr. Ned Taylor.  I'm passionate about human curiousity and discovering the mysteries of the Universe.</p>
+						<p>I'm a PhD student at the Centre for Astrohphyiscs and Supercomputing in Melbourne where I work on observing massive and quiescent galaxies at high redshift using NIR imaging and spectroscopy.  My supervisors are Prof. Karl Glazebrook, A. Prof. Ivo Lab&eacute and A. Prof. Ned Taylor.  I'm passionate about human curiousity and discovering the mysteries of the Universe.</p>
                         <p style="font-style: italic;">"I may not have gone where I intended to go, but I think I have ended up where I needed to be." - Douglas Adams </p>
 					</section>
 
